# newspipe

./: .bowerrc  .buildpacks  .editorconfig  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .pre-commit-config.yaml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  Dockerfile  NEWS.rst  Pipfile  Procfile  PyQRNative.py  README  README.md  README.rst  SECURITY.md  app.json  app.py  articles.py  bootstrap.py  bower.json  conf.py  db_create.py  docker-compose.yml  export.py  feedgetter.py  fetch.py  fix.py  install.sh  internationalization.sh  manage.py  manager.py  messages.pot  (+13 more)
.builds/: debian.yml
.github/workflows/: codeql-analysis.yml
alembic/: alembic.ini
benchmark/: result1.txt  testelasticsearch.py  testwhoosh.py
cfg/: cherrypy.cfg  pyAggr3g470r.cfg  pyAggr3g470r.cfg-sample
conf/: conf.cfg-sample
css/: style.css
docs/: conf.py  index.rst  make.bat
docs/schemas/: Feed
documentation/: Makefile  conf.py  deployment.rst  index.rst  migrations.rst  requirements.rst  web-services.rst
documentation/schemas/: Article  Feed
epub/: epub.py  ez_epub.py
epub/templates/: content.opf
instance/: config.py  production.py  sqlite.py
migrations/: alembic.ini  env.py
migrations/versions/: 112a423d7463_add_index_on_feed_id_date.py  16f8fc3cf0cc_add_column_webpage_in_the_user_table.py  17dcb75f3fe_changed_the_type_of_the_column_last_.py  19bdaa6208e_add_icon_column.py  1b750a389c22_remove_email_notification_column.py  2472eddbf44b_update_of_the_user_model.py  25ca960a207_mv_icons_from_feed_tbl_to_icon_tbl.py  2a5604bed382_add_string_user_external_auth.py  2c5cc05216fa_adding_tag_handling_capacities.py  3f83bfe93fc_add_updated_date_column_to_article_table.py  3f83bfe93fc_adding_category.py  422da2d0234_adding_filters_field.py  48f561c0ce6_add_column_entry_id.py  4b5c161e1ced_.py  5553a6c05fa7_add_column_twitter_in_the_user_table.py  594d7410d04f_new_fields_for_user_profile.py  661199d8768a_problem_with_the_last_upgrade.py  73540b3bf183_removed_twitter_user_property.py  7f973d010686_add_updated_date_column_to_article_table.py  8bf5694c0b9e_add_column_automatic_crawling_to_the_.py  957d4c5b8ac9_add_column_is_public_profile_to_the_.py  ac35c979311a_removed_activation_key_from_the_user_.py  b329a1a7366f_add_new_tables_for_the_bookmarks_and_.py  bdd38bd755cb_remove_email_attribute_from_users_.py  be2b8b6f33dd_add_column_private_to_the_feeds_table.py  cde34831ea_adding_feed_and_user_attributes_for_.py  d3f9a2b1c4e5_add_auto_disabled_column_to_feeds.py  f4e8c2a91b30_add_article_note_table.py  f700c4237e9d_remove_refresh_rate_column_from_the_.py  fa10b0bdd045_add_bio_column_to_user_table.py
newspipe/: bootstrap.py  commands.py  conf.py  manager.py  runserver.py
newspipe/conf/: conf.cfg-sample
newspipe/controllers/: __init__.py  abstract.py  article.py  bookmark.py  category.py  feed.py  icon.py  note.py  tag.py  user.py
newspipe/crawler/: default_crawler.py
newspipe/lib/: article_utils.py  constants.py  data.py  feed_utils.py  misc_utils.py  sanitizers.py  url_validation.py  utils.py
newspipe/models/: __init__.py  article.py  bookmark.py  category.py  feed.py  icon.py  note.py  right_mixin.py  role.py  tag.py  user.py
newspipe/notifications/: emails.py  notifications.py
newspipe/templates/: about.html  about_more.html  article.html  article_pub.html  bookmarks.html  categories.html  category_public.html  duplicates.html  edit_bookmark.html  edit_category.html  edit_feed.html  feed.html  feed_list.html  feed_list_per_categories.html  feeds.html  history.html  home.html  humans.txt  inactives.html  layout.html  login.html  macros.html  management.html  notes.html  opml.xml  popular.html  profile.html  profile_public.html  security.txt  signup.html  user_stream.html
newspipe/translations/: internationalization.sh  messages.pot
newspipe/web/: __init__.py  decorators.py  forms.py
pyaggr3g470r/: __init__.py  compare.py  crawler.py  decorators.py  duplicate.py  emails.py  export.py  feedgetter.py  forms.py  initialization.py  log.py  models.py  notifications.py  requirements.txt  rest.py  search.py  utils.py  views.py
pyaggr3g470r/controllers/: __init__.py  abstract.py  article.py  category.py  feed.py  icon.py  user.py
pyaggr3g470r/lib/: article_utils.py  client.py  crawler.py  exceptions.py  feed_utils.py  utils.py  view_utils.py
pyaggr3g470r/models/: __init__.py  article.py  category.py  feed.py  role.py  user.py
pyaggr3g470r/static/: bare.html
pyaggr3g470r/templates/: about.html  article.html  articles.html  duplicates.html  edit_feed.html  favorites.html  feed.html  feed_list.html  feeds.html  history.html  home.html  inactives.html  layout.html  (+9 more)
scripts/: probes.py
source/: auth.py  binarytree.py  clusters.py  conf.py  export.py  feedgetter.py  generatefeedvector.py  log.py  mongodb.py  pyAggr3g470r  pyAggr3g470r.py  search.py  sqlite2mongo.py  testbinarytree.py  testclusters.py  utils.py
src/: alembic.ini  bootstrap.py  conf.py  crawler.py  manager.py  runserver.py
tests/: fixtures.py
vagrant/: README.md  Vagrantfile  bootstrap.sh  conf.cfg-sample
var/: feed.lst
web/: crawler.py  emails.py  utils.py
(+338 files in other folders)
