[tool.poetry]
name = "newspipe"
version = "9.5.0"
description = "Newspipe is a web news aggregator."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

homepage = "https://sr.ht/~cedric/newspipe"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
requests = "^2.25.1"
chardet = "^4.0.0"
requests-futures = "^1.0.0"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
opml = "^0.5"
SQLAlchemy = "^2.0.12"
alembic = "^1.10.4"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.3"
Flask-Login = "^0.6.2"
Flask-Principal = "^0.4.0"
Flask-WTF = "^1.1.1"
Flask-RESTful = "^0.3.9"
Flask-paginate = "^0.8.1"
Flask-Babel = "^2.0.0"
Flask-Migrate = "^3.0.1"
WTForms = "^2.3.3"
python-dateutil = "^2.8.1"
psycopg2-binary = "^2.9.6"
flask-talisman = "^0.8.1"
feedparser = "^6.0.8"
mypy = "^0.991"
ldap3 = "^2.9.1"

[tool.poetry.group.dev.dependencies ]
sqlalchemy-schemadisplay = "^1.3"
flake8 = "^3.9.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
pyupgrade = "^2.34.0"
reorder-python-imports = "^3.1.0"
pip-audit = "^2.4.3"
types-python-dateutil = "^2.8.19.5"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "migrations|docs"
