[tool.poetry]
name = "newspipe"
version = "11.0.0"
description = "Newspipe is a web news aggregator."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

homepage = "https://github.com/cedricbonhomme/newspipe"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.11.2"
requests = "^2.32.0"
chardet = "^5.2.0"
requests-futures = "^1.0.0"
beautifulsoup4 = "^4.9.3"
lxml = "^5.3.0"
opml = "^0.5"
SQLAlchemy = "^2.0.36"
alembic = "^1.10.4"
Flask = "^3.1.0"
Flask-SQLAlchemy = "^3.0.3"
Flask-Login = "^0.6.3"
Flask-Principal = "^0.4.0"
Flask-WTF = "^1.1.1"
Flask-RESTful = "^0.3.10"
Flask-paginate = "^2024.4.12"
Flask-Babel = "^4.0.0"
Flask-Migrate = "^3.0.1"
WTForms = "^3.1.1"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.10"
flask-talisman = "^1.1.0"
feedparser = "^6.0.11"
mypy = "^1.13.0"
ldap3 = "^2.9.1"

[tool.poetry.group.dev.dependencies]
sqlalchemy-schemadisplay = "^1.3"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
black = "^24.10.0"
pyupgrade = "^3.15.0"
pip-audit = "^2.7.3"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "migrations|docs"

[tool.isort]
profile = "black"
